[metadata]
name = python_openzwave
description = python_openzwave is a python wrapper for the openzwave c++ library.
long_description = A full API to map the ZWave network in Python objects. Look at examples at : https://github.com/OpenZWave/python-openzwave
platforms = any
author = NotTheEvilOne et al.
author_email = dev-NTEO@vplace.de
license = GPLv3+
url = https://github.com/OpenZWave/python-openzwave
classifiers =
    Topic :: Home Automation
    Topic :: System :: Hardware
    Topic :: System :: Hardware :: Hardware Drivers
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: POSIX :: BSD
    Programming Language :: C++
    Programming Language :: Python :: 2
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
